# mesagisto-client-jni

./: .gitignore  Cargo.toml  README.md  gradle.properties  settings.gradle
lib/src/main/java/org/meowcat/mesagisto/jni/: MesagistoClient.java
src/: lib.rs
